# genai_platform_services

./: .gitignore  .isort.cfg  .makeenv  .ruff.toml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
src/: completion_input.py  config.py  custom_response.py  default_prompts.py  logging_config.py  main.py  unified_completion_router.py  unified_input.py
src/api/routers/: chatcompletion_router.py
src/api/utility/: guardrails.py
tests/: test_unified_completion.py
